close #24 : Save last view into localStorage

--- a/.jshintrc
+++ b/.jshintrc
@@ -11,6 +11,7 @@
   "eqnull": true,
   "node": true,
   "globals": {
+    "localStorage": false,
     "angular": false,
     "d3": false,
     "document": false,
