--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-angular-templates": "~0.5.1"
+    "grunt-angular-templates": "~0.5.1",
+    "grunt-contrib-cssmin": "~0.8.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
