--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "grunt-contrib-cssmin": "~0.8.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "underscore": "~1.6.0"
   },
   "keywords": [
     "gruntplugin"
