--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular": "~1.2.0",
     "angular-route": "~1.2.0",
     "underscore": "~1.5.2",
-    "d3": "~3.4.1"
+    "d3": "~3.4.1",
+    "highlightjs": "~8.0.0"
   },
   "devDependencies": {}
 }
